Mentor Detail Update

--- a/index.html
+++ b/index.html
@@ -1783,7 +1783,7 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
                     <!-- <h2>Team Lead</h2> -->
                     <div class="overlay">
                       <!-- <img src="assets/img/clients/aws.jpeg" width="60%" style="margin:10px 0px ;border-radius: 5px;"> -->
-                    <p style="padding-top: 50px;">Country Head for Script Foundation | Influener of Google Crowdsource<span style="font-size:15px;"></span></p>
+                    <p style="padding-top: 50px;"> Influener of Google Crowdsource<span style="font-size:15px;"></span></p>
                     <div class="sm" style="margin-top: 70px;">
                       
                       <a href="https://twitter.com/SiddharthDayal1 " target="blank"><i class="fab fa-twitter"></i></a>
@@ -2076,14 +2076,14 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header" style="background:url(assets/img/bg111.jpg);background-size: contain;">
-                <h4 class="modal-title" style="color: white;font-weight: bold;">Siddharth Dayalwal<br>(Country Head for Script Foundation &<br> Influener of Google Crowdsource)</h4>
+                <h4 class="modal-title" style="color: white;font-weight: bold;">Siddharth Dayalwal<br> (Influener of Google Crowdsource)</h4>
                 <button type="button" class="close" data-dismiss="modal" style="outline: none;color: white;opacity: 0.8;">&times;</button>
               
               </div>
               <div class="modal-body" style="background: url(assets/img/bg32.jpg);background-size: cover;">
               <div style="background:rgba(255,255,255,0.6);padding: 10px;">
                 <p align="justify">
-                  I am Country Head for Script Foundation. I am an Influener of Google Crowdsource. I am a Hackathon Lover! I have been a part of 40+ Hackathons as a Hacker, Volunteer, Coordinator, Core Team member, Organiser, Judge, Mentor & Speaker. I am a Tech-Speaker & Community Lover. </p>
+                   I am an Influener of Google Crowdsource. I am a Hackathon Lover! I have been a part of 40+ Hackathons as a Hacker, Volunteer, Coordinator, Core Team member, Organiser, Judge, Mentor & Speaker. I am a Tech-Speaker & Community Lover. </p>
               </div>
             </div>
               <div class="modal-footer">
