--- a/index.html
+++ b/index.html
@@ -2742,6 +2742,22 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
               </a>
               </div>
             </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 col-sm-6">
+              <div class="supporter-logo">
+                <a href="https://www.portis.io/" target="blank">
+                <img src="assets/img/clients/size/portis.png" class="img-fluid" alt="">
+              </a>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 col-sm-6">
+              <div class="supporter-logo">
+                <a href="https://xinfin.org/" target="blank">
+                <img src="assets/img/clients/size/xinfin.png" class="img-fluid" alt="">
+              </a>
+              </div>
+            </div>
            
 
             
