--- a/index.html
+++ b/index.html
@@ -2952,11 +2952,21 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
 
           <div class="col-lg-3 col-md-4 col-xs-6 col-sm-6">
             <div class="supporter-logo">
+              <a href="https://www.linkedin.com/company/linkedin-local-anand/" target="blank">
+                <img src="assets/img/clients/size/linkedinanand.png" class="img-fluid" alt="">
+            </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6 col-sm-6">
+            <div class="supporter-logo">
               <a href="https://www.hyperledger.org/" target="blank">
                 <img src="assets/img/clients/size/hyperledger.jpeg" class="img-fluid" alt="">
             </a>
             </div>
           </div>
+
+         
 
           </div>
 
