tracks/themes update

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
           <li><a href="#gift">Prizes</a></li>
           <li><a href="#pricing">Sponsors</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="#tracks">Tracks</a></li>
+          <li><a href="#tracks">Tracks/Themes</a></li>
           <li><a href="#faq">FAQ</a></li>
           <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
