theme card update

--- a/index.html
+++ b/index.html
@@ -3503,6 +3503,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="themecard" style="background: url(assets/img/themes/AR.jpg);background-size: cover;">
             <div class="theme-overlay">
               <p>AR / VR</p>
+              <img src="assets/img/bg31.jpg" style="opacity: 0.1;" alt="" height="100%" width="100%">
             </div>
           </div>
         </div>
@@ -3510,6 +3511,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="themecard" style="background: url(assets/img/themes/Education.jpg);background-size: cover;">
             <div class="theme-overlay">
               <p>Education</p>
+              <img src="assets/img/bg31.jpg" style="opacity: 0.1;" alt="" height="100%" width="100%">
             </div>
           </div>
         </div>
@@ -3517,6 +3519,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="themecard" style="background: url(assets/img/themes/bc.png);background-size: cover;">
             <div class="theme-overlay">
               <p>Blockchain</p>
+              <img src="assets/img/bg31.jpg" style="opacity: 0.1;" alt="" height="100%" width="100%">
             </div>
           </div>
         </div>
@@ -3524,6 +3527,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="themecard" style="background: url(assets/img/themes/Healthcare.jpg); background-size: cover;">
             <div class="theme-overlay">
               <p>Healthcare</p>
+              <img src="assets/img/bg31.jpg" style="opacity: 0.1;" alt="" height="100%" width="100%">
             </div>
           </div>
         </div>
@@ -3534,6 +3538,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="themecard" style="background: url(assets/img/themes/Open.png);background-size: cover;">
             <div class="theme-overlay">
               <p>Open Innovation</p>
+              <img src="assets/img/bg31.jpg" style="opacity: 0.1;" alt="" height="100%" width="100%">
             </div>
           </div>
         </div>
@@ -3541,6 +3546,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="themecard" style="background: url(assets/img/themes/Crypto.png);background-size: cover;">
             <div class="theme-overlay">
               <p>Crypto Currency</p>
+              <img src="assets/img/bg31.jpg" style="opacity: 0.1;" alt="" height="100%" width="100%">
             </div>
           </div>
         </div>
@@ -3548,6 +3554,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
           <div class="themecard" style="background: url(assets/img/themes/AI2.jpg);background-size: cover;">
             <div class="theme-overlay">
               <p>AI / ML</p>
+              <img src="assets/img/bg31.jpg" style="opacity: 0.1;" alt="" height="100%" width="100%">
             </div>
           </div>
         </div>
