Links Updated in Schedule

--- a/index.html
+++ b/index.html
@@ -1484,6 +1484,8 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
             <h4 class="title"><a>Speaker Name: Veliswa Boya</a></h4><br>
             <h4 class="title"><a>Session Name: "Journey To Being An AWS Hero With Serverless On AWS."</a></h4><br>
             <h4 class="title"><a>Timings: IST 6:00PM</a></h4><br>
+            <h4  class="title"><a>Session Link: <a href="http://bit.ly/HackGujaratVeliswa" style="color:blue">http://bit.ly/HackGujaratVeliswa</a></h4><br>
+            
 
 
           
