All team members are in main page

--- a/index.html
+++ b/index.html
@@ -3373,7 +3373,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
       <div class="container">
         
         <div class="section-title" data-aos="fade-up">
-          <h2>Team</h2>
+          <h2>Core Team</h2>
         </div>
 
         <div class="teamsection" style="margin-bottom: 40px;">
