--- a/index.html
+++ b/index.html
@@ -1457,6 +1457,7 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
             <h4  class="title"><a>Speaker Name: Seema Saharan</a> </h4><br>
             <h4  class="title"><a>Session Name: "Introduction to Open Source"</a></h4><br>
             <h4  class="title"><a>Timings: IST 7:00PM</a></h4><br>
+             <h4  class="title"><a>Session Link: <a href="https://youtu.be/dZE0_1g0jNo" style="color:blue">https://youtu.be/dZE0_1g0jNo</a></h4><br>
 
 
           
