Event Schedule Updated

--- a/index.html
+++ b/index.html
@@ -1595,8 +1595,9 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
                                 
 
                             <ul >
-                              <li id="main-menu" >10:00 AM - Inauguration Ceremony</li>
-                              <li id="main-menu">12:00 PM - Hackathon Starts</li>
+                              <li id="main-menu" ><p style="font-weight:bold">10:00 AM - Inauguration Ceremony</p><p style="padding-left: 30px;">During the Ceremony, We would give out the details regarding the domains, the judging parameters and other important messages.</p>
+                              </li>
+                              <li id="main-menu"><p style="font-weight:bold">12:00 PM - Hackathon Starts</p></li>
 
                             </ul>
 
@@ -1612,7 +1613,21 @@ He has also spoken at several events and workshops.He has developed a CTF Platfo
                             <h3 class="title">6th September,2020</h3>
                             <p class="description">
                              <ul >
-                            <li id="main-menu" >6:00PM Hackathon Ends</li>
+                            <li id="main-menu" ><p style="font-weight:bold">6:00PM Hackathon Ends</p></li>
+
+                          </ul>
+                            </p>
+                        </div>
+                    </a>
+                </div>
+                 <div class="timeline">
+                    <a href="#" class="timeline-content">
+                       
+                        <div class="inner-content">
+                            <h3 class="title">14th September,2020</h3>
+                            <p class="description">
+                             <ul >
+                            <li id="main-menu" ><p style="font-weight:bold">Winner Annoucements</p></li>
 
                           </ul>
                             </p>
