slack modal update

--- a/index.html
+++ b/index.html
@@ -354,22 +354,22 @@
 
 <div class="modal fade rounded-0"  id="myModal" tabindex="-1" role="dialog"  >
   <div class=" modal-dialog modal-sm" >
-    <div class="modal-content rounded-0"  style="text-align: center;;border-radius: 100px;">
-      <div class="modal-header" style="text-align: center;">
+    <div class="modal-content rounded-0"  style="text-align: center;">
+      <div class="modal-header" style="background:url(assets/img/bg1234.jpg);background-size: contain; color: white;margin: 5px;border-radius: 3px;">
         <center>Get In Touch With Us</center>
        
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" style="color: white;font-size: 15px;" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body" style="text-align: center;border-radius: 40px;background:lightgray">
+      <div class="modal-body" style="text-align: center;">
         <p>Haven't Join Our Slack Community?</p>
         <p>Join Here</p>
-        <a href="https://join.slack.com/t/hackgujaratcommunity/shared_invite/zt-gtux3pdz-9ac~UbeSUE29iaRcqyJ4nQ"><button type="button" class="btn-lg btn-slack" ><i  class="fab fa-slack "></i>Slack</button></a>
+        <a href="https://join.slack.com/t/hackgujaratcommunity/shared_invite/zt-gtux3pdz-9ac~UbeSUE29iaRcqyJ4nQ"><button type="button" class="btn-lg btn-slack" style="font-size: 17px;" ><i  class="fab fa-slack "></i>&nbsp;Slack</button></a>
       </div>
       <div class="modal-footer"style="background:;">
        
-        <button type="button" class="btn btn-info btn-lg"  style="background-color: #f17c1c;"data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-lg"  style="background-color: #f17c1c;outline: none;color: white;" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
