hackathon ending timer update

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
       <script>
       // Set the date we're counting down to
-      var countDownDate = new Date("Sep 6, 2020 06:00:00").getTime();
+      var countDownDate = new Date("Sep 6, 2020 18:00:00").getTime();
 
       // Update the count down every 1 second
       var x = setInterval(function() {
@@ -615,7 +615,7 @@ document.addEventListener('DOMContentLoaded', function () {
          document.getElementById("minutes").innerHTML=minutes+"<br>Minutes";
          document.getElementById("seconds").innerHTML=seconds+"<br>Seconds";
 
-         document.getElementById("main_time").innerHTML=hours+" h "+minutes+" m "+seconds+" s";
+         document.getElementById("main_time").innerHTML=days+" d "+hours+" h "+minutes+" m "+seconds+" s";
         // If the count down is over, write some text 
         if (distance < 0) {
           clearInterval(x);
