--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ document.addEventListener('DOMContentLoaded', function () {
          document.getElementById("minutes").innerHTML=minutes+"<br>Minutes";
          document.getElementById("seconds").innerHTML=seconds+"<br>Seconds";
 
-         document.getElementById("main_time").innerHTML=days+" d "+hours+" h "+minutes+" m "+seconds+" s";
+         document.getElementById("main_time").innerHTML=days+" d : "+hours+" h : "+minutes+" m : "+seconds+" s";
         // If the count down is over, write some text 
         if (distance < 0) {
           clearInterval(x);
