--- a/index.html
+++ b/index.html
@@ -4084,7 +4084,7 @@ function switchStyle() {
   }
 }
   </style>
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
+<!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog pic" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -4129,7 +4129,7 @@ function switchStyle() {
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- gallary -->
 <!-- <div class="container" style="padding-left: 10%">
