--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
           <li><a href="#pricing">Sponsors</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#tracks">Tracks/Themes</a></li>
+           <li><a href="#testimonials">Testimonials</a></li>
           <li><a href="#faq">FAQ</a></li>
           <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -4029,6 +4030,74 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
       
 
         
+
+      </div>
+    </section>
+      <section id="testimonials" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-title">
+          <h2>Testimonials</h2>
+          <h4 style="text-align:center;font-weight: bold;">What People Think Of Us</h4>
+        </div>
+        <div class="owl-carousel testimonials-carousel">
+
+          <div class="testimonial-item">
+           <div class="card" id="card">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <div class="row">
+                    <div class="col-md-2"><img src="https://img.icons8.com/ultraviolet/40/000000/quote-left.png" style="width:40px;height: 40px;">
+                    </div>
+                    <div class="col-md-10">
+                    </div>
+                  </div>
+                </h4>
+                <div class="template-demo">
+                  <p>As a mentor I learn from them, I taught them, overall I am inspired by the people and the ideas they have baught to this hackathon. Everyone has taken it has a challenge and built amazing and useful things in that less time which is so amazing.</p>
+                </div>
+                <hr>
+                <div class="row">
+                  <div class="col-md-2">  </div>
+                  <div class="col-md-8">
+                    <div class="profile">
+                        <h4 class="cust-name">Shashidhar Reddy Javaji</h4>
+                        <p class="cust-profession" style="font-size: 15px;">Mentor</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="testimnial-item">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <div class="row">
+                    <div class="col-md-2"><img src="https://img.icons8.com/ultraviolet/40/000000/quote-left.png" style="width:40px;height: 40px;">
+                    </div>
+                    <div class="col-md-10">
+                    </div>
+                  </div>
+                </h4>
+                <div class="template-demo">
+                  <p>Hack-Gujarat was a complete package of tremendous teaching, learning, networking and meeting new people and having lots of fun. I, as a mentor, was excited to look at the projects which participants built. I was very happy to see all of the people putting so much efforts right from the organizing team to all the participants. Some projects were very unique and helpful for the society for solving real life problems. While helping a lot of the participants about their doubts, I also learnt many new things and experimented it with the participants. I am happy to see such a growing community like Hack-Gujarat organizing such wonderful events. Hope to see all the people again in the next great event :)</p>
+                </div>
+                <hr>
+                <div class="row">
+                  <div class="col-md-2">  </div>
+                  <div class="col-md-8">
+                    <div class="profile">
+                        <h4 class="cust-name">Yash Patel</h4>
+                        <p class="cust-profession" style="font-size: 15px;">Mentor</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
 
       </div>
     </section>
