--- a/index.html
+++ b/index.html
@@ -4094,7 +4094,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
 
       </div>
     </section>
-    <div style="background-color: lightgray"><br><br>
+<!--     <div style="background-color: lightgray"><br><br>
       <div class="section-title" id="gallary" data-aos="fade-up">
         <h2>Gallary</h2>
       </div>
@@ -4112,7 +4112,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
         <div  data-aos="fade-up"><img src="assets/img/gallary/i10.jpeg" class="zoom-hover"></div>
         <div  data-aos="fade-up"><img src="assets/img/gallary/i11.jpeg" class="zoom-hover"></div>
       </div>
-    </div>
+    </div> -->
 
 
     <!-- testimo start -->
