Hover Effect Issue Solved

--- a/index.html
+++ b/index.html
@@ -4094,14 +4094,14 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
 
       </div>
     </section>
-    <div style="background-color: lightgray"><br><br>
+    <div  class="team section-bg"><br><br>
       <div class="section-title" id="gallary" data-aos="fade-up">
         <h2>Gallary</h2>
       </div>
       <div class="container con-st  "  data-aos="fade-up">
-        <div  data-aos="fade-up"><img src="assets/img/gallary/i1.jpeg"  style="height:10%"class="zoom-hover">
+        <div  data-aos="fade-up"><div><img src="assets/img/gallary/i1.jpeg"  class="zoom-hover"></div>
         </div>
-        <div  data-aos="fade-up"><img src="assets/img/gallary/i2.jpeg"  style="height:50%" class="zoom-hover"></div>
+        <div  data-aos="fade-up"><img src="assets/img/gallary/i2.jpeg"   class="zoom-hover"></div>
         <div  data-aos="fade-up"><img src="assets/img/gallary/i4.jpeg" class="zoom-hover"></div>
         <div  data-aos="fade-up"><img src="assets/img/gallary/i3.jpeg" class="zoom-hover"></div>
         <div  data-aos="fade-up"><img src="assets/img/gallary/i5.jpeg" class="zoom-hover"></div>
