--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
           <li><a href="#team">Team</a></li>
           <li><a href="#tracks">Tracks/Themes</a></li>
 
-          <li><a href="#gallary">Gallary</a></li>
+          <li><a href="#gallary">Gallery</a></li>
 
            <li><a href="#testim">Testimonials</a></li>
 
@@ -4096,7 +4096,7 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
     </section>
     <div  class="team section-bg"><br><br>
       <div class="section-title" id="gallary" data-aos="fade-up">
-        <h2>Gallary</h2>
+        <h2>Gallery</h2>
       </div>
       <div class="container con-st  "  data-aos="fade-up">
         <div  data-aos="fade-up"><div><img src="assets/img/gallary/i1.jpeg"  class="zoom-hover"></div>
