silver sponsor gmc update

--- a/index.html
+++ b/index.html
@@ -3154,8 +3154,16 @@ I am a passionate and dedicated learner who loves creating solutions to real-lif
 
             <div class="col-lg-3 col-md-4 col-xs-6 col-sm-6" >
               <div class="supporter-logo">
-                <a href="https://magoosh.com/press/" target="blank">
+                <a href="https://magoosh.com/" target="blank">
                 <img src="assets/img/clients/size/magoosh.png" class="img-fluid" alt="">
+              </a>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 col-sm-6" >
+              <div class="supporter-logo">
+                <a href="https://givemycertificate.com/" target="blank">
+                <img src="assets/img/clients/size/gmc.png" class="img-fluid" alt="">
               </a>
               </div>
             </div>
